# FastFileExplorer

./: .gitignore  CMakeLists.txt  README.md
src/: directory_watcher.cpp  directory_watcher.hpp  file_explorer.cpp  file_explorer.hpp  file_list_view.cpp  file_list_view.hpp  file_system_utils.cpp  file_system_utils.hpp  icon_browser.cpp  main.cpp  main_window.cpp  main_window.hpp
